src/objects/Master_CongressionalDistrict__c.object
<CustomObject>
    <fields>
        <fullName>Congressional_Dist__c</fullName>
        <label>Congressional Dist</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max4__c</fullName>
        <description>In Zip+4 the Maximum 4 digit value will be stored in this field.</description>
        <externalId>true</externalId>
        <label>Max4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max9Zip__c</fullName>
        <formula>zip_Plus4__c + Max4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max9Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min4__c</fullName>
        <description>In Zip+4 the last 4 Minimum value will be stored in this field.</description>
        <externalId>true</externalId>
        <label>Min4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min9Zip__c</fullName>
        <formula>zip_Plus4__c  +  Min4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min9Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip_Plus4__c</fullName>
        <description>Will have 5 digit zip code.</description>
        <externalId>true</externalId>
        <label>zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Master CongressionalDistrict</label>
    <listViews>
        <fullName>All_Congressional_District_and_County</fullName>
        <columns>NAME</columns>
        <columns>zip_Plus4__c</columns>
        <columns>Min4__c</columns>
        <columns>Max4__c</columns>
        <columns>Congressional_Dist__c</columns>
        <columns>County_Name__c</columns>
        <columns>State_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Congressional District and County</label>
    </listViews>
    <listViews>
        <fullName>Per_Zip</fullName>
        <columns>NAME</columns>
        <columns>zip_Plus4__c</columns>
        <columns>Max4__c</columns>
        <columns>Min4__c</columns>
        <columns>Congressional_Dist__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zip_Plus4__c</field>
            <operation>equals</operation>
            <value>90095</value>
        </filters>
        <label>Per Zip</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Master CongressionalDistrict Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master CongressionalDistricts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>